# bayesianfin

./: .gitignore  .nojekyll  00_data.html  00_data.md  01_garch_like_modelling.html  01_garch_like_modelling.md  README.md  garch_like_modelling.html  garch_like_modelling.html.md  garch_like_sample_vol.html  garch_like_sample_vol.html.md  index.html  index.html.md  index.md  pyproject.toml  search.json  settings.ini  simulator.html  simulator.md  sitemap.xml  volatility_and_storage.html  volatility_and_storage.html.md
_proc/: 01_garch_like_modelling.html.md  01_garch_like_modelling.ipynb  index.ipynb  sidebar.yml
_proc/_docs/: core.html  garch_like_modelling.html  garch_like_modelling.html.md  index.html  robots.txt  search.json  sitemap.xml
bayesianfin/: _modidx.py  data.py  models.py  simulation.py
data/: brent_oil.csv  crude_oil.csv  gasoline_rbob.csv  heating_oil.csv  london_gas_oil.csv  ng_daily.csv  ng_storage.csv
dev_nbs/: 02_garch_like_sample_vol.ipynb  data_study.ipynb
nbs/: 00_data.ipynb  01_garch_like_modelling.ipynb  02_garch_like_sample_vol.ipynb  03_volatility_and_storage.ipynb  garch_modelling.ipynb  index.ipynb  nbdev.yml  sidebar.yml  simulator.ipynb
