[project]
name="bayesianfin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "arviz>=0.20.0",
    "graphviz>=0.20.3",
    "ipywidgets>=8.1.6",
    "nbdev>=2.3.34",
    "numpyro>=0.17.0",
    "polars>=1.22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
]
